modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/required-annotations.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8requiredannotations
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Required Annotations"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Requires resources to contain specified annotations, with values matching
      provided regular expressions.
spec:
  crd:
    spec:
      names:
        kind: D8RequiredAnnotations
      validation:
        openAPIV3Schema:
          type: object
          properties:
            annotations:
              type: array
              description: >-
                A list of annotations and values the object must specify.
              items:
                type: object
                properties:
                  key:
                    type: string
                    description: >-
                      The required annotation.
                  allowedRegex:
                    type: string
                    description: >-
                      If specified, a regular expression the annotation's value
                      must match. The value must contain at least one match for
                      the regular expression.
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: |
              package d8.operation_policies

              violation contains {"msg": msg, "details": {"missing_annotations": missing}} if {
                  not input.review.operation == "DELETE"
                  provided := {annotation | input.review.object.metadata.annotations[annotation]}
                  required := {annotation | annotation := input.parameters.annotations[_].key}
                  missing := required - provided
                  count(missing) > 0
                  msg := sprintf("you must provide annotations: %v", [missing])
              }

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                value := input.review.object.metadata.annotations[key]
                expected := input.parameters.annotations[_]
                expected.key == key
                expected.allowedRegex != ""
                not regex.match(expected.allowedRegex, value)
                msg := sprintf("Annotation <%v: %v> does not satisfy allowed regex: %v", [key, value, expected.allowedRegex])
              }
