modules/015-admission-policy-engine/charts/constraint-templates/tests/required-annotations/allowed_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
  annotations:
    foo: bar
    bar: zcx.example.com
spec:
  containers:
    - name: nginx
      image: nginx
