modules/015-admission-policy-engine/charts/constraint-templates/tests/required-annotations/disallowed_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed
  namespace: default
  annotations:
    bar: xxx.example.com
spec:
  template:
    spec:
      containers:
        - name: foo
  selector:
    matchLabels:
      foo: bar
