modules/015-admission-policy-engine/charts/constraint-templates/tests/required-annotations/disallowed_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
  annotations:
    foo: bar
    bar: xxx
spec:
  containers:
    - name: nginx
      image: nginx
