modules/015-admission-policy-engine/charts/constraint-templates/tests/required-annotations/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8requiredannotations
tests:
  - name: d8requiredannotations
    template: ../../templates/operation/required-annotations.yaml
    constraint: constraint.yaml
    cases:
      - name: pod-allowed
        object: allowed_pod.yaml
        assertions:
          - violations: no
      - name: dep-allowed
        object: allowed_dep.yaml
        assertions:
          - violations: no
      - name: pod-disallowed
        object: disallowed_pod.yaml
        assertions:
          - violations: yes
      - name: dep-disallowed
        object: disallowed_dep.yaml
        assertions:
          - violations: yes
            message: 'you must provide annotation(s): {"foo"}'
